syntax = "proto3";

import "validate/validate.proto";

option go_package = "github.com/onflow/flow-archive/api/archive";

service API {
  rpc GetFirst(GetFirstRequest) returns (GetFirstResponse) {}
  rpc GetLast(GetLastRequest) returns (GetLastResponse) {}
  rpc GetHeightForBlock(GetHeightForBlockRequest) returns (GetHeightForBlockResponse) {}
  rpc GetCommit(GetCommitRequest) returns (GetCommitResponse) {}
  rpc GetHeader(GetHeaderRequest) returns (GetHeaderResponse) {}
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse) {}
  rpc GetRegisterValues(GetRegisterValuesRequest) returns (GetRegisterValuesResponse) {}
  rpc GetCollection(GetCollectionRequest) returns (GetCollectionResponse) {}
  rpc ListCollectionsForHeight(ListCollectionsForHeightRequest) returns (ListCollectionsForHeightResponse) {}
  rpc GetGuarantee(GetGuaranteeRequest) returns (GetGuaranteeResponse) {}
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}
  rpc GetHeightForTransaction(GetHeightForTransactionRequest) returns (GetHeightForTransactionResponse) {}
  rpc ListTransactionsForHeight(ListTransactionsForHeightRequest) returns (ListTransactionsForHeightResponse) {}
  rpc GetResult(GetResultRequest) returns (GetResultResponse) {}
  rpc GetSeal(GetSealRequest) returns (GetSealResponse) {}
  rpc ListSealsForHeight(ListSealsForHeightRequest) returns (ListSealsForHeightResponse) {}
}

message GetFirstRequest {}

message GetFirstResponse {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
}

message GetLastRequest {}

message GetLastResponse {
  uint64 height = 1;
}

message GetHeightForBlockRequest {
  bytes blockID = 1 [(validate.rules).bytes.len = 32];
}

message GetHeightForBlockResponse {
  bytes blockID = 1;
  uint64 height = 2;
}

message GetCommitRequest {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
}

message GetCommitResponse {
  uint64 height = 1;
  bytes commit = 2;
}

message GetHeaderRequest {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
}

message GetHeaderResponse {
  uint64 height = 1;
  bytes data = 2;
}

message GetEventsRequest {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
  repeated string types = 2;
}

message GetEventsResponse {
  uint64 height = 1;
  repeated string types = 2;
  bytes data = 3;
}

message GetRegisterValuesRequest {
  reserved 2;
  reserved "paths";

  uint64 height = 1 [(validate.rules).uint64.gt = 0];
  repeated bytes registers = 3 [(validate.rules).repeated.min_items = 1];
}

message GetRegisterValuesResponse {
  reserved 1, 2;
  reserved "paths";
  reserved "height";

  repeated bytes values = 3;
}

message GetCollectionRequest {
  bytes collectionID = 1 [(validate.rules).bytes.len = 32];
}

message GetCollectionResponse {
  bytes collectionID = 1;
  bytes data = 2;
}

message ListCollectionsForHeightRequest {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
}

message ListCollectionsForHeightResponse {
  uint64 height = 1;
  repeated bytes collectionIDs = 2;
}

message GetGuaranteeRequest {
  bytes collectionID = 1 [(validate.rules).bytes.len = 32];
}

message GetGuaranteeResponse {
  bytes collectionID = 1;
  bytes data = 2;
}

message GetTransactionRequest {
  bytes transactionID = 1 [(validate.rules).bytes.len = 32];
}

message GetTransactionResponse {
  bytes transactionID = 1;
  bytes data = 2;
}

message GetHeightForTransactionRequest {
  bytes transactionID = 1 [(validate.rules).bytes.len = 32];
}

message GetHeightForTransactionResponse {
  bytes transactionID = 1;
  uint64 height = 2;
}

message ListTransactionsForHeightRequest {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
}

message ListTransactionsForHeightResponse {
  uint64 height = 1;
  repeated bytes transactionIDs = 2;
}

message GetResultRequest {
  bytes transactionID = 1 [(validate.rules).bytes.len = 32];
}

message GetResultResponse {
  bytes transactionID = 1;
  bytes data = 2;
}

message GetSealRequest {
  bytes sealID = 1 [(validate.rules).bytes.len = 32];
}

message GetSealResponse {
  bytes sealID = 1;
  bytes data = 2;
}

message ListSealsForHeightRequest {
  uint64 height = 1 [(validate.rules).uint64.gt = 0];
}

message ListSealsForHeightResponse {
  uint64 height = 1;
  repeated bytes sealIDs = 2;
}
